--- a/style.css
+++ b/style.css
@@ -61,20 +61,40 @@ section {
     font-size: 4.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal{
     background-color: white;
     color: black
 }
 
 section.imagem {
-    background-color: rgb(19, 16, 16);
+    background-color: rgb(61, 56, 56);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.478);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.439);
+    background-color: rgba(0, 0, 0, 0.506);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    
+
+}
+
+section#img02 {
+    background-image: url(imagens/background002.jpg);
+
 }
 
 footer {
